--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/yiershan/SmokeTesting/issues"
   },
-  "homepage": "https://github.com/yiershan/SmokeTesting#readme"
+  "homepage": "https://github.com/yiershan/SmokeTesting#readme",
+  "dependencies": {
+    "jquery": "^3.3.1"
+  }
 }
