--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "index.js",
+    "index.d.ts",
+    "src/*.js",
+    "src/*.d.ts",
+    "README.md",
+    "package.json",
+    "dist/index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yiershan/SmokeTesting.git"
